--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,8 @@
 /BodyPartQuiz.class
 /DrumKit.class
 /DuelingButtons.class
+/Earth.png
+/Houses.class
 /MyFirstSwingGUI.class
 /PhotoQuiz.class
 /Recipes.html
@@ -17,5 +19,9 @@
 /morgan.jpeg
 /sawing-wood-daniel_simon.wav
 /snare.jpg
-/Houses.class
-/Earth.png
+/bassDrum.png
+/bassDrum.wav
+/cymbal.png
+/cymbal.aiff
+/snareDrum.png
+/snareDrum.wav
