Quiz, Buttons, and Jack in the box

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -7,7 +7,11 @@
 /PhotoQuiz.class
 /Recipes.html
 /arnold.jpeg
+/bassDrum.png
+/bassDrum.wav
+/cymbal.aiff
 /cymbal.jpg
+/cymbal.png
 /cymbal.wav
 /drum.wav
 /extra/
@@ -19,9 +23,9 @@
 /morgan.jpeg
 /sawing-wood-daniel_simon.wav
 /snare.jpg
-/bassDrum.png
-/bassDrum.wav
-/cymbal.png
-/cymbal.aiff
 /snareDrum.png
 /snareDrum.wav
+/robert.jpg
+/tom.jpg
+/FortuneCookie.class
+/JackInTheBox.class
