--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -2,7 +2,9 @@
 /DrumKit.class
 /DuelingButtons.class
 /Earth.png
+/FortuneCookie.class
 /Houses.class
+/JackInTheBox.class
 /MyFirstSwingGUI.class
 /PhotoQuiz.class
 /Recipes.html
@@ -21,11 +23,16 @@
 /java.png
 /leonardo.jpeg
 /morgan.jpeg
+/robert.jpg
 /sawing-wood-daniel_simon.wav
 /snare.jpg
 /snareDrum.png
 /snareDrum.wav
-/robert.jpg
 /tom.jpg
-/FortuneCookie.class
-/JackInTheBox.class
+/SoundEffectsMachine.class
+/r2d2Eureka.wav
+/reverseCymbal.wav
+/explosion.wav
+/punch.wav
+/carSkid.wav
+/CutenessTV.class
